; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/ipvs/extr_ip_vs_pe.c_ip_vs_pe_getbyname.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/ipvs/extr_ip_vs_pe.c_ip_vs_pe_getbyname.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ip_vs_pe = type { i32 }

@.str = private unnamed_addr constant [12 x i8] c"ip_vs_pe_%s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.ip_vs_pe* @ip_vs_pe_getbyname(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.ip_vs_pe*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = call %struct.ip_vs_pe* @__ip_vs_pe_getbyname(i8* %4)
  store %struct.ip_vs_pe* %5, %struct.ip_vs_pe** %3, align 8
  %6 = load %struct.ip_vs_pe*, %struct.ip_vs_pe** %3, align 8
  %7 = icmp ne %struct.ip_vs_pe* %6, null
  br i1 %7, label %13, label %8

8:                                                ; preds = %1
  %9 = load i8*, i8** %2, align 8
  %10 = call i32 @request_module(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i8* %9)
  %11 = load i8*, i8** %2, align 8
  %12 = call %struct.ip_vs_pe* @__ip_vs_pe_getbyname(i8* %11)
  store %struct.ip_vs_pe* %12, %struct.ip_vs_pe** %3, align 8
  br label %13

13:                                               ; preds = %8, %1
  %14 = load %struct.ip_vs_pe*, %struct.ip_vs_pe** %3, align 8
  ret %struct.ip_vs_pe* %14
}

declare dso_local %struct.ip_vs_pe* @__ip_vs_pe_getbyname(i8*) #1

declare dso_local i32 @request_module(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
